syntax = "proto3";

package sovereign.protocol.v1;

option go_package = "github.com/sovereign-im/sovereign/server/internal/protocol";

// ============================================================================
// Envelope â€” top-level wrapper for all WebSocket messages
// ============================================================================

// Envelope wraps every message exchanged over the WebSocket connection.
// The `type` field determines how the `payload` bytes should be deserialized.
message Envelope {
  // The type of message contained in the payload.
  MessageType type = 1;

  // Client-generated unique ID for request-response correlation.
  // Responses echo the request_id from the originating request.
  // Server-initiated messages use an empty string.
  string request_id = 2;

  // Serialized protobuf message corresponding to the `type` field.
  bytes payload = 3;
}

// MessageType enumerates all message types in the Sovereign protocol.
enum MessageType {
  // Default/unknown value. Must not be used in valid messages.
  MESSAGE_TYPE_UNSPECIFIED = 0;

  // Authentication
  AUTH_REQUEST             = 1;
  AUTH_CHALLENGE            = 2;
  AUTH_RESPONSE             = 3;
  AUTH_SUCCESS              = 4;
  AUTH_ERROR                = 5;
  AUTH_REGISTER_REQUEST     = 6;
  AUTH_REGISTER_CHALLENGE   = 7;
  AUTH_REGISTER_RESPONSE    = 8;
  AUTH_REGISTER_SUCCESS     = 9;

  // Messaging
  MESSAGE_SEND              = 20;
  MESSAGE_RECEIVE           = 21;
  MESSAGE_ACK               = 22;
  MESSAGE_DELIVERED         = 23;

  // Groups
  GROUP_CREATE              = 30;
  GROUP_CREATED             = 31;
  GROUP_INVITE              = 32;
  GROUP_MEMBER_ADDED        = 33;
  GROUP_MEMBER_REMOVED      = 34;
  GROUP_LEAVE               = 35;

  // MLS Key Management
  MLS_KEY_PACKAGE_UPLOAD    = 40;
  MLS_KEY_PACKAGE_FETCH     = 41;
  MLS_KEY_PACKAGE_RESPONSE  = 42;
  MLS_WELCOME               = 43;
  MLS_WELCOME_RECEIVE       = 44;
  MLS_COMMIT                = 45;
  MLS_COMMIT_BROADCAST      = 46;

  // Presence
  PRESENCE_UPDATE           = 50;
  PRESENCE_NOTIFY           = 51;

  // System
  PING                      = 60;
  PONG                      = 61;
  ERROR                     = 62;
}

// ============================================================================
// Authentication Messages
// ============================================================================

// AuthRequest initiates a login flow. Client -> Server.
message AuthRequest {
  // The username of the account to authenticate as.
  string username = 1;
}

// AuthChallenge contains the WebAuthn challenge for authentication. Server -> Client.
message AuthChallenge {
  // Random challenge bytes generated by the server.
  bytes challenge = 1;

  // Serialized JSON of WebAuthn PublicKeyCredentialRequestOptions.
  bytes credential_request_options = 2;
}

// AuthResponse contains the signed WebAuthn assertion. Client -> Server.
message AuthResponse {
  // The ID of the credential used to sign the challenge.
  bytes credential_id = 1;

  // Authenticator data from the WebAuthn assertion.
  bytes authenticator_data = 2;

  // Client data JSON from the WebAuthn assertion.
  bytes client_data_json = 3;

  // The signature over the challenge.
  bytes signature = 4;
}

// AuthSuccess confirms successful authentication. Server -> Client.
message AuthSuccess {
  // Opaque session token for reconnection.
  string session_token = 1;

  // Unique identifier for the authenticated user.
  string user_id = 2;

  // The user's username.
  string username = 3;

  // The user's display name.
  string display_name = 4;
}

// AuthError indicates an authentication failure. Server -> Client.
message AuthError {
  // Numeric error code (see error-codes.md).
  int32 error_code = 1;

  // Human-readable error description.
  string message = 2;
}

// AuthRegisterRequest initiates a new user registration. Client -> Server.
message AuthRegisterRequest {
  // Desired username. Must be unique.
  string username = 1;

  // User's display name shown to other users.
  string display_name = 2;
}

// AuthRegisterChallenge contains the WebAuthn challenge for credential creation. Server -> Client.
message AuthRegisterChallenge {
  // Random challenge bytes generated by the server.
  bytes challenge = 1;

  // Serialized JSON of WebAuthn PublicKeyCredentialCreationOptions.
  bytes credential_creation_options = 2;
}

// AuthRegisterResponse contains the newly created WebAuthn credential. Client -> Server.
message AuthRegisterResponse {
  // The ID of the newly created credential.
  bytes credential_id = 1;

  // Authenticator data from the credential creation.
  bytes authenticator_data = 2;

  // Client data JSON from the credential creation.
  bytes client_data_json = 3;

  // Attestation object containing the public key and attestation statement.
  bytes attestation_object = 4;
}

// AuthRegisterSuccess confirms successful registration. Server -> Client.
message AuthRegisterSuccess {
  // Unique identifier for the newly created user.
  string user_id = 1;

  // Opaque session token for reconnection.
  string session_token = 2;
}

// ============================================================================
// Messaging
// ============================================================================

// MessageSend sends an encrypted message to a conversation. Client -> Server.
message MessageSend {
  // The ID of the conversation (1:1 or group) to send to.
  string conversation_id = 1;

  // MLS ciphertext. The server cannot read the content.
  bytes encrypted_payload = 2;

  // Hint for client UI: "text", "image", "file", "audio", "video",
  // "reaction", "reply", "edit", "delete".
  string message_type = 3;
}

// MessageReceive delivers an encrypted message to the client. Server -> Client.
message MessageReceive {
  // Unique identifier for this message, assigned by the server.
  string message_id = 1;

  // The conversation this message belongs to.
  string conversation_id = 2;

  // The user ID of the message sender.
  string sender_id = 3;

  // MLS ciphertext.
  bytes encrypted_payload = 4;

  // Server-assigned timestamp in Unix microseconds.
  int64 server_timestamp = 5;

  // Message type hint (same as in MessageSend).
  string message_type = 6;
}

// MessageAck acknowledges receipt of a message. Client -> Server.
message MessageAck {
  // The ID of the message being acknowledged.
  string message_id = 1;
}

// MessageDelivered notifies the sender of delivery. Server -> Client.
message MessageDelivered {
  // The ID of the delivered message.
  string message_id = 1;

  // The user ID of the recipient who received the message.
  string delivered_to = 2;
}

// ============================================================================
// Groups
// ============================================================================

// GroupCreate creates a new group conversation. Client -> Server.
message GroupCreate {
  // Display title for the group.
  string title = 1;

  // User IDs to add as initial members. The creator is automatically included.
  repeated string member_ids = 2;
}

// GroupCreated confirms group creation. Server -> Client.
message GroupCreated {
  // The unique ID assigned to the new group.
  string conversation_id = 1;

  // The group title.
  string title = 2;

  // List of group members.
  repeated GroupMember members = 3;
}

// GroupMember describes a member of a group conversation.
message GroupMember {
  // The member's user ID.
  string user_id = 1;

  // The member's username.
  string username = 2;

  // The member's display name.
  string display_name = 3;

  // Role: "admin" or "member".
  string role = 4;
}

// GroupInvite invites a user to an existing group. Client -> Server.
message GroupInvite {
  // The group conversation ID.
  string conversation_id = 1;

  // The user ID of the person to invite.
  string user_id = 2;
}

// GroupMemberAdded notifies that a new member was added. Server -> Client.
message GroupMemberAdded {
  // The group conversation ID.
  string conversation_id = 1;

  // The user ID of the newly added member.
  string user_id = 2;

  // The user ID of the person who added them.
  string added_by = 3;
}

// GroupMemberRemoved notifies that a member was removed. Server -> Client.
message GroupMemberRemoved {
  // The group conversation ID.
  string conversation_id = 1;

  // The user ID of the removed member.
  string user_id = 2;

  // The user ID of the person who removed them.
  string removed_by = 3;
}

// GroupLeave signals that the client is leaving a group. Client -> Server.
message GroupLeave {
  // The group conversation ID to leave.
  string conversation_id = 1;
}

// ============================================================================
// MLS Key Management
// ============================================================================

// MLSKeyPackageUpload uploads an MLS KeyPackage to the server. Client -> Server.
message MLSKeyPackageUpload {
  // Serialized MLS KeyPackage as defined in RFC 9420.
  bytes key_package_data = 1;
}

// MLSKeyPackageFetch requests a KeyPackage for a user. Client -> Server.
message MLSKeyPackageFetch {
  // The user ID whose KeyPackage is being requested.
  string user_id = 1;
}

// MLSKeyPackageResponse returns a KeyPackage. Server -> Client.
message MLSKeyPackageResponse {
  // The user ID the KeyPackage belongs to.
  string user_id = 1;

  // Serialized MLS KeyPackage.
  bytes key_package_data = 2;
}

// MLSWelcome sends an MLS Welcome to a new group member. Client -> Server.
message MLSWelcome {
  // The group conversation the Welcome is for.
  string conversation_id = 1;

  // The user ID of the new member receiving the Welcome.
  string recipient_id = 2;

  // Serialized MLS Welcome message as defined in RFC 9420.
  bytes welcome_data = 3;
}

// MLSWelcomeReceive delivers an MLS Welcome to the client. Server -> Client.
message MLSWelcomeReceive {
  // The group conversation the Welcome is for.
  string conversation_id = 1;

  // The user ID who sent the Welcome.
  string sender_id = 2;

  // Serialized MLS Welcome message.
  bytes welcome_data = 3;
}

// MLSCommit sends an MLS Commit for distribution to the group. Client -> Server.
message MLSCommit {
  // The group conversation the Commit applies to.
  string conversation_id = 1;

  // Serialized MLS Commit message as defined in RFC 9420.
  bytes commit_data = 2;
}

// MLSCommitBroadcast broadcasts an MLS Commit to group members. Server -> Client.
message MLSCommitBroadcast {
  // The group conversation the Commit applies to.
  string conversation_id = 1;

  // The user ID who sent the Commit.
  string sender_id = 2;

  // Serialized MLS Commit message.
  bytes commit_data = 3;
}

// ============================================================================
// Presence
// ============================================================================

// PresenceUpdate sets the client's presence status. Client -> Server.
message PresenceUpdate {
  // One of: "online", "away", "offline".
  string status = 1;
}

// PresenceNotify informs the client of another user's presence change. Server -> Client.
message PresenceNotify {
  // The user whose presence changed.
  string user_id = 1;

  // The new status: "online", "away", or "offline".
  string status = 2;
}

// ============================================================================
// System
// ============================================================================

// Ping is a heartbeat message. Client -> Server.
message Ping {
  // Client's current timestamp in Unix microseconds.
  int64 timestamp = 1;
}

// Pong is a heartbeat response. Server -> Client.
message Pong {
  // Echoed timestamp from the client's Ping.
  int64 timestamp = 1;
}

// Error reports a problem to the client. Server -> Client.
message Error {
  // Numeric error code (see error-codes.md).
  int32 code = 1;

  // Human-readable error description.
  string message = 2;

  // If true, the server will close the connection after sending this error.
  bool fatal = 3;
}
